Static manifest-based gallery

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 <body>
   <aside class="sidebar">
     <h2>Art Styles</h2>
-    <input id="folder-search" class="search folder-search" placeholder="Search Art Styles…" />
+    <input id="folder-search" class="search folder-search"
+           placeholder="Search Art Styles…" />
     <ul id="folder-list" class="folder-list"></ul>
+    <button id="theme-toggle" class="theme-toggle" title="Toggle theme">🌓</button>
   </aside>
 
   <main class="main-content">
     <header>
-      <h1 id="current-folder">Select a Folder</h1>
-      <input id="image-search" class="search image-search" placeholder="Search Images…" />
+      <h1 id="current-folder">Select a Style</h1>
+      <input id="image-search" class="search image-search"
+             placeholder="Search Images…" />
     </header>
     <div id="gallery" class="gallery"></div>
   </main>
