--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <button data-count="3">Three color combination</button>
           <button data-count="random">Random number of color combinations</button>
         </div>
+        <div id="color-display" class="color-display"></div>
       </section>
 
       <div id="gallery" class="gallery"></div>
