--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
         <div id="color-display" class="color-display"></div>
       </section>
 
-      <div id="gallery" class="gallery"></div>
+      <div id="gallery" class="gallery">
+        <div id="bg-grid" class="section-grid backgrounds"></div>
+        <div id="main-grid" class="section-grid mains"></div>
+      </div>
     </main>
 
     <div id="toast" class="toast">Copied!</div>
